# vgdb

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  benchmark-results-2020-05-24.txt  benchmark-results-2020-05-25.txt  family.vgdb  mypy.ini  pyproject.toml  repl.py  test.py
.github/workflows/: build.yml  lint-test-build.yml  lint.yml  lint_test_build.yml  pre-commit.yml  test.yml
scripts/: bench.py  benchmark.py  repl.py  vgdb_bench.py
tests/tests_unit/: test_command.py  test_evaluator.py  test_lexer.py  test_parser.py  test_record.py  test_repl.py  test_row.py  test_storage.py  test_table.py
toydb/: ast.py  command.py  database.py  evaluator.py  get_tables.py  lexer.py  parse_schema.py  parser.py  query_parser.py  record.py  repl.py  row.py  sql_token.py  statement.py  storage.py  table.py  token.py  where.py
vgdb/: __init__.py  evaluator.py  get_tables.py  lexer.py  parser.py  repl_utils.py  sql_token.py  statement.py  storage.py  table.py  type.py  where.py
