[tool.poetry]
name = "toydb"
version = "0.1.0"
description = "An RDBMS"
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
