[tool.poetry]
name = "toydb"
version = "0.1.0"
description = "An RDBMS"
authors = ["Vegard Stikbakke <vegard.stikbakke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"
blessings = "^1.7"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
pytest = "^5.4.1"
pre-commit = "^2.2.0"
mypy = "^0.770"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.py$'

[tool.isort]
line_length=120                # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
known_third_party = ["blessings", "pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"